--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@zarconontol/enzyme-adapter-react-18": "^0.7.3",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "enzyme": "^3.11.0",
+    "jest": "^28.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -48,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/enzyme": "^3.10.12"
   }
 }
