--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ yarn-error.log*
 /src/components/SearchInput.tsx
 /src/components/NewsCards.jsx
 /src/components/TextTruncate/clampIt.js
+/src/useRoutesSetup.tsx
