--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "whatwg-fetch": "^3.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.12"
+    "@types/enzyme": "^3.10.12",
+    "msw": "^0.42.0"
   }
 }
